[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-american-binomial-options"
version = "0.1.0"
description = "A Python library for fast American binomial option pricing using PyCUDA"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [ ]
keywords = ["options", "binomial", "pricing", "cuda", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "pycuda>=2021.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12.0",
]


[tool.setuptools]
packages = ["fast_american_binomial_options", "fast_american_binomial_options.calculators"]

[tool.setuptools.package-data]
fast_american_binomial_options = ["py.typed"]
